# ogl

./: '  .gitmodules  CMakeLists.txt  build.sh
shaders/: fragment.glsl  fragment_red.glsl  fragment_yellow.glsl  vertex.glsl  vertex_hoffset.glsl  vertex_out.glsl
src/: CMakeLists.txt  bmp.c  bmp.h  log.c  log.h  one_one.c  one_three.c  one_two.c  shader.c  shader.h  two_one.c  two_three.c  two_two.c  window.c
src/shaders/: vertex.glsl
