add_executable(window window.c log.c log.h shader.c shader.h)
set_target_properties(window PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(window glad)
target_link_libraries(window glfw)
target_link_libraries(window bmp)
if (WIRE_FRAME)
  target_compile_definitions(window PUBLIC WIRE_FRAME)
endif()

add_executable(ex_oneone one_one.c log.c log.h shader.c shader.h)
set_target_properties(ex_oneone PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(ex_oneone glad)
target_link_libraries(ex_oneone glfw)
target_link_libraries(window bmp)

add_executable(ex_onetwo one_two.c log.c log.h shader.c shader.h)
set_target_properties(ex_onetwo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(ex_onetwo glad)
target_link_libraries(ex_onetwo glfw)
target_link_libraries(window bmp)

add_executable(ex_onethree one_three.c log.c log.h shader.c shader.h)
set_target_properties(ex_onethree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(ex_onethree glad)
target_link_libraries(ex_onethree glfw)
target_link_libraries(window bmp)

add_executable(ex_twoone two_one.c log.c log.h shader.c shader.h)
set_target_properties(ex_twoone PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(ex_twoone glad)
target_link_libraries(ex_twoone glfw)
target_link_libraries(window bmp)

add_executable(ex_twotwo two_two.c log.c log.h shader.c shader.h)
set_target_properties(ex_twotwo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(ex_twotwo glad)
target_link_libraries(ex_twotwo glfw)
target_link_libraries(window bmp)

add_executable(ex_twothree two_three.c log.c log.h shader.c shader.h)
set_target_properties(ex_twothree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(ex_twothree glad)
target_link_libraries(ex_twothree glfw)
target_link_libraries(window bmp)
